# priorities

./: .gitignore  Cargo.toml  Configuration.toml.example  Dockerfile  LICENSE  README.md
src/: app.rs  main.rs
src/couch/tasks/: taskIndex.js
src/less/: tasks.less
src/models/: task.rs
src/routes/: mod.rs  task_routes.rs
src/utils/: cors.rs
static/: index.html
static/css/: tasks.css
static/js/: tasks.js
tests/: package-lock.json  package.json
tests/cypress/e2e/: tasks.cy.js
