[package]
name = "priorities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.5"
actix-cors = "0.6.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
env_logger = "0.11.0"
reqwest = { version = "0.11.23", features = ["json"] }
chrono = { version = "0.4.33", features = ["serde"] }